# ETrobo_2026

./: CLAUDE.md  Makefile  README.md  START TRACE LOG----sample_c5_log---.txt  appdir  currentapp  odometry.py  走行ログ.txt
etrobocon2026-main/etrobocon2026-main/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.inc  README.md  app.cfg  app.cpp  app.h  compose.yaml
etrobocon2026-main/etrobocon2026-main/.github/: pull_request_template.md
etrobocon2026-main/etrobocon2026-main/.github/workflows/: build-check-camera.yaml  build-check-running.yaml  format-check.yaml  test-camera.yaml  test-running.yaml
etrobocon2026-main/etrobocon2026-main/camera_server/: Makefile.camera  main.cpp
etrobocon2026-main/etrobocon2026-main/camera_server/modules/camera/: CameraCapture.cpp  CameraCapture.h
etrobocon2026-main/etrobocon2026-main/camera_server/modules/image_processors/: BoundingBoxDetector.h  ColorRegionDetector.cpp  ColorRegionDetector.h  ImageRecognitionResults.h
etrobocon2026-main/etrobocon2026-main/camera_server/modules/utils/: FrameSave.cpp  FrameSave.h
etrobocon2026-main/etrobocon2026-main/camera_server/tests/: CameraCaptureTest.cpp  ColorRegionDetectorTest.cpp
etrobocon2026-main/etrobocon2026-main/common/: CsvLogger.cpp  CsvLogger.h  Logger.cpp  Logger.h  SystemInfo.h
etrobocon2026-main/etrobocon2026-main/common/customs/: Clock.h
etrobocon2026-main/etrobocon2026-main/datafiles/commands/Area/: LineTraceLeft.csv
etrobocon2026-main/etrobocon2026-main/datafiles/commands/Motions/: CDCL.csv  DCL.csv  DS.csv  EXAMPLE.csv
etrobocon2026-main/etrobocon2026-main/datafiles/commands/Run/: run_LineTraceLeft.csv
etrobocon2026-main/etrobocon2026-main/modules/: AreaMaster.cpp  AreaMaster.h  Course.h  EtRobocon2026.cpp  EtRobocon2026.h  MotionParser.cpp  MotionParser.h  Robot.cpp  Robot.h
etrobocon2026-main/etrobocon2026-main/modules/API/: ArmMotorController.cpp  ArmMotorController.h  BaseMotorController.cpp  BaseMotorController.h  ClockUtil.cpp  ClockUtil.h  ColorSensorController.cpp  ColorSensorController.h  IMUController.cpp  IMUController.h  WheelMotorController.cpp  WheelMotorController.h
etrobocon2026-main/etrobocon2026-main/modules/calculators/: AngleNormalizer.cpp  AngleNormalizer.h  Mileage.cpp  Mileage.h  Pid.cpp  Pid.h  SpeedCalculator.cpp  SpeedCalculator.h
etrobocon2026-main/etrobocon2026-main/modules/motions/: AbsoluteRotation.cpp  AbsoluteRotation.h  BaseMotion.cpp  BaseMotion.h  RelativeRotation.cpp  RelativeRotation.h  Rotation.cpp  Rotation.h  Straight.cpp  Straight.h
etrobocon2026-main/etrobocon2026-main/modules/motions/continuation_conditions/: AbsoluteAngleContinuationCondition.cpp  AbsoluteAngleContinuationCondition.h  AngleContinuationCondition.cpp  AngleContinuationCondition.h  BaseContinuationCondition.cpp  (+5 more)
etrobocon2026-main/etrobocon2026-main/scripts/: CommandMerger.cpp  merge_commands.sh
etrobocon2026-main/etrobocon2026-main/tests/: AbsoluteAngleContinuationConditionTest.cpp  AbsoluteRotationTest.cpp  ArmMototControllerTest.cpp  ClockUtilTest.cpp  ColorSensorControllerTest.cpp  CsvLoggerTest.cpp  DistanceConitionTest.cpp  EtRobocon2026Test.cpp  IMUControllerTest.cpp  LoggerTest.cpp  MileageTest.cpp  MotionParserTest.cpp  PidTest.cpp  RelativeAngleContinuationConditionTest.cpp  RelativeRotationTest.cpp  RobotTest.cpp  SpeedCalculatorTest.cpp  StraightTest.cpp  WheelMotorControllerTest.cpp
etrobocon2026-main/etrobocon2026-main/tests/dummy/: Clock.h  ColorSensor.h  IMU.h  Motor.h  Port.h  spikeapi.h
(+28 files in other folders)
